# inLimbo

./: .Doxyfile  .clang-format  .clangd  .gitignore  .gitmessage  .gitmodules  .pre-commit-config.yaml  AUTHORS  BUILD.md  CHANGELOG.md  CMakeLists.txt  COLORS.md  CONTRIBUTING.md  Makefile  README.md  VERSION  index.html  init.sh  make_docs.sh  run_tests.sh
.github/workflows/: build-arch.yaml  build-arch.yml  build-fedora.yaml  build-fedora.yml  build-ubuntu.yml  codeql-inLimbo.yml  fmt-check.yml  inLimbo-build.yml  inLimbo-tests.yml  run-tests-ubuntu.yml
assets/: inLimbo.desktop
assets/completions/: inLimbo-completions.bash  inLimbo-completions.fish  inLimbo-completions.zsh
assets/manpage/: inLimbo.1
ci/: binaries.txt
ci/apt/: packages.txt
ci/pacman/: packages.txt
ci/rpm/: packages.txt
cmake/: FrontendPluginList.cmake  Version.cmake
cmake/frontends/: cmdline.cmake  ftxui.cmake  raylib.cmake
cmake/mpris/: mpris-c.cmake
docs/: RedBlackTree.md  RingBuffer.md  inLimbo.html  index.html
docs/html/: AUTHORS.html  BUILD_8md.html  CHANGELOG_8md.html  CImg_8h.html  CImg_8h.js  CMakeLists_8txt.html  COLORS_8md.html  LICENSE.html  NETWORK_8md.html  SONGMAP_8md.html  _8clang-format.html  _formulas.tex  _formulas_dark.tex  annotated.html  annotated_dup.js  arg-handler_8hpp.html  arg-handler_8hpp.js  arg-handler_8hpp_source.html  audio__playback_8hpp.html  audio__playback_8hpp.js  audio__playback_8hpp_source.html  build-dbg_2__deps_2ftxui-src_2examples_2dom_2color__info__sorted__2d_8ipp_source.html  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2animation_8hpp_source.html  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2captured__mouse_8hpp_source.html  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2component_8hpp_source.html  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2component__base_8hpp_source.html  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2component__options_8hpp_source.html  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2event_8hpp_source.html  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2loop_8hpp_source.html  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2mouse_8hpp_source.html  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2receiver_8hpp_source.html  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2screen__interactive_8hpp_source.html  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2task_8hpp_source.html  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2dom_2canvas_8hpp_source.html  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2dom_2deprecated_8hpp_source.html  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2dom_2direction_8hpp_source.html  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2dom_2elements_8hpp_source.html  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2dom_2flexbox__config_8hpp_source.html  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2dom_2linear__gradient_8hpp_source.html  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2dom_2node_8hpp_source.html  (+892 more)
docs/latex/: AUTHORS.tex  BUILD_8md.tex  CImg_8h.tex  CMakeLists_8txt.tex  NETWORK_8md.tex  _8clang-format.tex  annotated.tex  arg-handler_8hpp.tex  arg-handler_8hpp_source.tex  audio__playback_8hpp.tex  audio__playback_8hpp_source.tex  build-dbg_2__deps_2ftxui-src_2examples_2dom_2color__info__sorted__2d_8ipp_source.tex  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2animation_8hpp_source.tex  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2captured__mouse_8hpp_source.tex  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2component_8hpp_source.tex  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2component__base_8hpp_source.tex  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2component__options_8hpp_source.tex  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2event_8hpp_source.tex  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2loop_8hpp_source.tex  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2mouse_8hpp_source.tex  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2receiver_8hpp_source.tex  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2screen__interactive_8hpp_source.tex  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2component_2task_8hpp_source.tex  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2dom_2canvas_8hpp_source.tex  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2dom_2deprecated_8hpp_source.tex  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2dom_2direction_8hpp_source.tex  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2dom_2elements_8hpp_source.tex  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2dom_2flexbox__config_8hpp_source.tex  build-dbg_2__deps_2ftxui-src_2include_2ftxui_2dom_2linear__gradient_8hpp_source.tex  (+332 more)
examples/config/: config.toml
src/: CmdLine.cc  Context.cc  Logger.cc  arg-handler.hpp  cmd-line-args.hpp  inLimbo.cpp  index.html  main.cpp  test.cpp
src/dirsort/: CMakeLists.txt  Makefile  SONGMAP.md  inode_mapper.hpp  main.cpp  rbtree.cpp  rbtree.hpp  songmap.cpp  songmap.hpp  taglib_parser.cpp  taglib_parser.h  test.cpp
templates/: README.md
tests/: CMakeLists.txt  TESTS.md
tests/audio/: CMakeLists.txt  MiniAudioPlayerTestLinux.cpp
tests/bench/: CMakeLists.txt  bench_rbt_erase.cc  bench_rbt_insert.cc  bench_rbt_iterate.cc  bench_smallstring_append_int.cc  bench_smallstring_append_large.cc  bench_smallstring_append_small.cc  bench_smallstring_compare.cc  bench_smallstring_ctor.cc  bench_smallstring_path.cc  common.hpp
tests/dbus/: Service.cc
tests/rbt/: CMakeLists.txt  rbt_erase.test.cc  rbt_fuzz.test.cc  rbt_insert.test.cc  rbt_invariants.test.cc  rbt_iterator.test.cc  rbt_validate.hpp
tests/smallstring/: CMakeLists.txt  SmallStringAppend.test.cc  SmallStringAssign.test.cc  SmallStringCTOR.test.cc  SmallStringClear.test.cc  SmallStringCompare.test.cc  SmallStringExtensionPath.test.cc  SmallStringSSO.test.cc  SmallStringStrView.test.cc
tests/taglib/: CMakeLists.txt  TagLibParserTestsLinux.cpp  dummy_file_gen.sh
tests/toml/: CMakeLists.txt  TomlParserTestsLinux.cpp
(+633 files in other folders)
